# UniversalEncodingDetector

./: AUTHORS  ChangeLog  Makefile.in  NEWS  configure.in
detectors/ascii/: Makefile.am  Makefile.in  ascii_detector.c
detectors/multibyte/: BIG5Freq.tab  EUCKRFreq.tab  EUCTWFreq.tab  GB18030Freq.tab  JISFreq.tab  Makefile.am  big5_statemachine.h  euckr_statemachine.h  gb18030_statemachine.h  shift_jis_statemachine.h
detectors/unicode/: Makefile.am  Makefile.in
include/: Makefile.am  universal_encoding_detector.h  universal_encoding_detector_version.h  universal_encoding_detector_version.h.in
lib/: build.h.in  char_distribution.c  char_distribution.h  modules.c  modules.h  types.h
spec/: universal_encoding_detector.pc.in
src/: configurator.h  core_detector.h  detector.c  detector.h  universal_encoding_detector.c
test/: Makefile.am  Makefile.in  test_debug.c  test_linkedlist.c  test_main.c  test_module.c  testing.h
trunk/: Makefile.am  README  config.h.in  configure
trunk/detectors/: Makefile.am  Makefile.in
trunk/detectors/ascii/: esc_statemachine.h
trunk/detectors/multibyte/: Makefile.in  euctw_statemachine.h  multibyte_detector.c  unicode_statemachine.h
trunk/detectors/unicode/: unicode_detector.c
trunk/include/: Makefile.in
trunk/lib/: Makefile.am  Makefile.in  debug.c  debug.h  encoding_state_machine.c  encoding_state_machine.h  linkedlist.c  linkedlist.h  packint.h
trunk/rules/: nmfile.make
trunk/src/: Makefile.am  Makefile.in  configurator.c
trunk/test/: test_packint.c  test_unicode_module.c  testing_framework.c  testing_framework.h  xxx_module.c
